styling fixes for sidebar on mobile view implemented

--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -51,8 +51,8 @@
   }
   .sideBarContentContainer {
     display: none;
-    position: absolute;
-    top: 40px;
+    position: fixed;
+    top: 140px;
     left: 10px;
     background-color: #fff;
     z-index: 1;
